<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_show"
        android:title="@string/action_show"
        android:orderInCategory="200"
        android:showAsAction="never" />
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="300"
        android:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="400"
        android:showAsAction="never" />
</menu>
